overflow-x corrected

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav ul {
 }
 
 .container {
-  width: 95%;
+  width: 100%;
   margin: 0 auto;
   padding: 20px 0;
   overflow-x: hidden;
@@ -148,10 +148,10 @@ img {
 }
 
 .container-destop {
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
   padding: 20px 0;
-  /* overflow-x: hidden; */
+  overflow-x: auto;
 }
 
 .img {
@@ -236,6 +236,15 @@ footer {
 
 .link-external-article {
   color: hotpink;
+  display: block; /* Ensures the link takes up the entire width available */
+  text-align: center; /* Centers the link's text horizontally */
+  /* padding: 10px 50px; Adjust padding as needed */
+  /* background-color: #007bff; */
+  display: block;
+  font-weight: bold;
+
+  /* width: 100px; */
+  /* font-size: 10px; */
 }
 
 ul {
